WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
274864
WebCore::XPath::Value has uninitialized fields after construction
https://bugs.webkit.org/show_bug.cgi?id=274864
Summary
WebCore::XPath::Value has uninitialized fields after construction
David Kilzer (:ddkilzer)
Reported
2024-05-29 14:59:11 PDT
WebCore::XPath::Value has uninitialized fields after construction. Regressed in: Support Mozilla's XPathEvaluator object.
http://bugzilla.opendarwin.org/show_bug.cgi?id=6638
<
https://commits.webkit.org/12012@main
>
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-29 14:59:28 PDT
<
rdar://problem/128966823
>
David Kilzer (:ddkilzer)
Comment 2
2024-05-29 16:26:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29260
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug