Source/WebCore/xml/XPathVariableReference.h
@@ -1,5 +1,6 @@
 /*
  * Copyright 2005 Frerich Raabe <raabe@kde.org>
+ * Copyright (C) 2006-2024 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,17 +29,17 @@
 #include "XPathExpressionNode.h"
 
 namespace WebCore {
-    namespace XPath {
+namespace XPath {
 
-        // Variable references are not used with XPathEvaluator.
-        class VariableReference : public Expression {
-        public:
-            explicit VariableReference(const String& name);
-        private:
-            Value evaluate() const override;
-            Value::Type resultType() const override { ASSERT_NOT_REACHED(); return Value::NumberValue; }
-            String m_name;
-        };
+// Variable references are not used with XPathEvaluator.
+class VariableReference : public Expression {
+public:
+    explicit VariableReference(const String& name);
+private:
+    Value evaluate() const override;
+    Value::Type resultType() const override { ASSERT_NOT_REACHED(); return Value::Type::Number; }
+    String m_name;
+};
 
-    } // namespace XPath
+} // namespace XPath
 } // namespace WebCore
